tests/node_tests/node_tests.exp
Error: buffer/buffer.js:57
 57: buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72], (a:number) => a + 1, {}); // error
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `from`. Function cannot be called on any member of intersection type
 57: buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72], (a:number) => a + 1, {}); // error
              ^^^^^^^^^^^ intersection
  Member 1:
  108:   static from(value: Buffer): Buffer;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:108
  Error:
   57: buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72], (a:number) => a + 1, {}); // error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
  108:   static from(value: Buffer): Buffer;
                            ^^^^^^ Buffer. See lib: <BUILTINS>/node.js:108
  Member 2:
  109:   static from(value: string, encoding?: buffer$Encoding): Buffer;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:109
  Error:
   57: buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72], (a:number) => a + 1, {}); // error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
  109:   static from(value: string, encoding?: buffer$Encoding): Buffer;
                            ^^^^^^ string. See lib: <BUILTINS>/node.js:109
  Member 3:
  110:   static from(value: ArrayBuffer, byteOffset?: number, length?: number): Buffer;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:110
  Error:
   57: buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72], (a:number) => a + 1, {}); // error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
  110:   static from(value: ArrayBuffer, byteOffset?: number, length?: number): Buffer;
                            ^^^^^^^^^^^ ArrayBuffer. See lib: <BUILTINS>/node.js:110
  Member 4:
  111:   static from(value: Iterable<number>): this;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:111
  Error:
   57: buffer = Buffer.from([0x62, 0x75, 0x66, 0x66, 0x65, 0x72], (a:number) => a + 1, {}); // error
                                                                  ^^^^^^^^^^^^^^^^^^^ unused function argument
    111:   static from(value: Iterable<number>): this;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/node.js:111

Error: child_process/execSync.js:8
  8: (execSync('ls', {timeout: '250'})); // error, no signatures match
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function call. Function cannot be called on any member of intersection type
  8: (execSync('ls', {timeout: '250'})); // error, no signatures match
      ^^^^^^^^ intersection
  Member 1:
                                  v
  260:   declare function execSync(
  261:     command: string,
  262:     options: {encoding: buffer$NonBufferEncoding} & child_process$execSyncOpts
  263:   ): string;
         --------^ function type. See lib: <BUILTINS>/node.js:260
  Error:
    8: (execSync('ls', {timeout: '250'})); // error, no signatures match
                       ^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
  262:     options: {encoding: buffer$NonBufferEncoding} & child_process$execSyncOpts
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/node.js:262
    Property `encoding` is incompatible:
      262:     options: {encoding: buffer$NonBufferEncoding} & child_process$execSyncOpts
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `encoding`. Property not found in. See lib: <BUILTINS>/node.js:262
        8: (execSync('ls', {timeout: '250'})); // error, no signatures match
                           ^^^^^^^^^^^^^^^^ object literal
  Member 2:
                                  v
  265:   declare function execSync(
  266:     command: string,
  267:     options?: child_process$execSyncOpts
  268:   ): Buffer;
         --------^ function type. See lib: <BUILTINS>/node.js:265
  Error:
    8: (execSync('ls', {timeout: '250'})); // error, no signatures match
                       ^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
  267:     options?: child_process$execSyncOpts
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/node.js:267
    Property `timeout` is incompatible:
        8: (execSync('ls', {timeout: '250'})); // error, no signatures match
                                     ^^^^^ string. This type is incompatible with
      149:   timeout?: number;
                       ^^^^^^ number. See lib: <BUILTINS>/node.js:149

Error: crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ Buffer. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

Error: crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ null. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

Error: crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ string. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

Error: crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ undefined. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

Error: crypto/crypto.js:16
 16:     hmac.write(123); // 2 errors: not a string or a Buffer
                    ^^^ number. This type is incompatible with the expected param type of
1467:     chunk: Buffer | string,
                 ^^^^^^^^^^^^^^^ union: Buffer | string. See lib: <BUILTINS>/node.js:1467
  Member 1:
  1467:     chunk: Buffer | string,
                   ^^^^^^ Buffer. See lib: <BUILTINS>/node.js:1467
  Error:
   16:     hmac.write(123); // 2 errors: not a string or a Buffer
                      ^^^ number. This type is incompatible with
  1467:     chunk: Buffer | string,
                   ^^^^^^ Buffer. See lib: <BUILTINS>/node.js:1467
  Member 2:
  1467:     chunk: Buffer | string,
                            ^^^^^^ string. See lib: <BUILTINS>/node.js:1467
  Error:
   16:     hmac.write(123); // 2 errors: not a string or a Buffer
                      ^^^ number. This type is incompatible with
  1467:     chunk: Buffer | string,
                            ^^^^^^ string. See lib: <BUILTINS>/node.js:1467

Error: crypto/crypto.js:26
 26:     hmac.update('foo', 'bogus'); // 1 error
                            ^^^^^^^ string. This type is incompatible with the expected param type of
                                                      v----------------------------
439:   update(data: string | Buffer, input_encoding?: 'utf8' | 'ascii' | 'latin1' |
440:   'binary'): crypto$Hmac;
       -------^ string enum. See lib: <BUILTINS>/node.js:439

Error: crypto/crypto.js:29
 29:     hmac.update(buf, 'bogus'); // 1 error
                          ^^^^^^^ string. This type is incompatible with the expected param type of
                                                      v----------------------------
439:   update(data: string | Buffer, input_encoding?: 'utf8' | 'ascii' | 'latin1' |
440:   'binary'): crypto$Hmac;
       -------^ string enum. See lib: <BUILTINS>/node.js:439

Error: crypto/crypto.js:36
 36:     (hmac.digest('hex'): void); // 1 error
          ^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 36:     (hmac.digest('hex'): void); // 1 error
                              ^^^^ undefined

Error: crypto/crypto.js:37
 37:     (hmac.digest(): void); // 1 error
          ^^^^^^^^^^^^^ Buffer. This type is incompatible with
 37:     (hmac.digest(): void); // 1 error
                         ^^^^ undefined

Error: fs/fs.js:13
     v-----------------------------------------------------------
 13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
 14:   (data : string);
 15: });
     -^ call of method `readFile`. Could not decide which case to select
 13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
     ^^^^^^^^^^^ intersection type
  Case 3 may work:
                                  v
  907:   declare function readFile(
  908:     path: string | Buffer | URL | number,
  909:     options: { encoding: string; flag?: string },
  910:     callback: (err: ?ErrnoError, data: string) => void
  911:   ): void;
         ------^ function type. See lib: <BUILTINS>/node.js:907
  But if it doesn't, case 4 looks promising too:
                                  v
  912:   declare function readFile(
  913:     path: string | Buffer | URL | number,
  914:     options: { flag?: string },
  915:     callback: (err: ?ErrnoError, data: Buffer) => void
  916:   ): void;
         ------^ function type. See lib: <BUILTINS>/node.js:912
  Please provide additional annotation(s) to determine whether case 3 works (or consider merging it with case 4):
   13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
                                                      ^ parameter `_`
   13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
                                                         ^^^^ parameter `data`

Error: fs/fs.js:28
 28: (fs.readFileSync("file.exp") : string); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Buffer. This type is incompatible with
 28: (fs.readFileSync("file.exp") : string); // error
                                    ^^^^^^ string

Error: fs/fs.js:31
 31: (fs.readFileSync("file.exp", "blah") : Buffer); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 31: (fs.readFileSync("file.exp", "blah") : Buffer); // error
                                            ^^^^^^ Buffer

Error: fs/fs.js:34
 34: (fs.readFileSync("file.exp", { encoding: "blah" }) : Buffer); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 34: (fs.readFileSync("file.exp", { encoding: "blah" }) : Buffer); // error
                                                          ^^^^^^ Buffer

Error: fs/fs.js:37
 37: (fs.readFileSync("file.exp", {}) : string); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Buffer. This type is incompatible with
 37: (fs.readFileSync("file.exp", {}) : string); // error
                                        ^^^^^^ string

Error: invalid_package_file/package.json:1
  1: 
     ^ Unexpected end of input

Error: json_file/json_invalid.json:1
  1: :derp
     ^ Unexpected token :

Error: json_file/test.js:4
  4: (data.foo: void); // error, should be object literal
      ^^^^^^^^ object literal. This type is incompatible with
  4: (data.foo: void); // error, should be object literal
                ^^^^ undefined

Error: json_file/test.js:5
  5: (data.foo.bar: void); // error, should be boolean
      ^^^^^^^^^^^^ boolean. This type is incompatible with
  5: (data.foo.bar: void); // error, should be boolean
                    ^^^^ undefined

Error: json_file/test.js:6
  6: (data.abc: boolean); // error, should be ?string
      ^^^^^^^^ null. This type is incompatible with
  6: (data.abc: boolean); // error, should be ?string
                ^^^^^^^ boolean

Error: json_file/test.js:6
  6: (data.abc: boolean); // error, should be ?string
      ^^^^^^^^ string. This type is incompatible with
  6: (data.abc: boolean); // error, should be ?string
                ^^^^^^^ boolean

Error: json_file/test.js:6
  6: (data.abc: boolean); // error, should be ?string
      ^^^^^^^^ undefined. This type is incompatible with
  6: (data.abc: boolean); // error, should be ?string
                ^^^^^^^ boolean

Error: json_file/test.js:9
  9: (data2.baz: void); // error, should be string
      ^^^^^^^^^ string. This type is incompatible with
  9: (data2.baz: void); // error, should be string
                 ^^^^ undefined

Error: json_file/test.js:12
 12: (data3.foo: void); // error, should be number (not string! index.js wins)
      ^^^^^^^^^ number. This type is incompatible with
 12: (data3.foo: void); // error, should be number (not string! index.js wins)
                 ^^^^ undefined

Error: json_file/test.js:16
 16: (data4: void); // error, should be Array<number>
      ^^^^^ array literal. This type is incompatible with
 16: (data4: void); // error, should be Array<number>
             ^^^^ undefined

Error: json_file/test.js:18
 18: (require('./json_string'): void); // error, should be string
      ^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 18: (require('./json_string'): void); // error, should be string
                                ^^^^ undefined

Error: json_file/test.js:19
 19: (require('./json_number'): void); // error, should be number
      ^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 19: (require('./json_number'): void); // error, should be number
                                ^^^^ undefined

Error: json_file/test.js:20
 20: (require('./json_true'): void); // error, should be true
      ^^^^^^^^^^^^^^^^^^^^^^ boolean. This type is incompatible with
 20: (require('./json_true'): void); // error, should be true
                              ^^^^ undefined

Error: json_file/test.js:21
 21: (require('./json_false'): void); // error, should be false
      ^^^^^^^^^^^^^^^^^^^^^^^ boolean. This type is incompatible with
 21: (require('./json_false'): void); // error, should be false
                               ^^^^ undefined

Error: json_file/test.js:22
 22: (require('./json_null'): void); // error, should be null
      ^^^^^^^^^^^^^^^^^^^^^^ null. This type is incompatible with
 22: (require('./json_null'): void); // error, should be null
                              ^^^^ undefined

Error: os/userInfo.js:7
  7: (u1.username: Buffer); // error
      ^^^^^^^^^^^ string. This type is incompatible with
  7: (u1.username: Buffer); // error
                   ^^^^^^ Buffer

Error: os/userInfo.js:11
 11: (u2.username: Buffer); // error
      ^^^^^^^^^^^ string. This type is incompatible with
 11: (u2.username: Buffer); // error
                   ^^^^^^ Buffer

Error: os/userInfo.js:14
 14: (u3.username: string); // error
      ^^^^^^^^^^^ Buffer. This type is incompatible with
 14: (u3.username: string); // error
                   ^^^^^^ string

Error: process/nextTick.js:13
 13:   (a: string, b: number, c: boolean) => {},
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
1937:   nextTick: <T>(cb: (...T) => mixed, ...T) => void;
                          ^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1937
  This parameter is incompatible:
     14:   0, // Error: number ~> string
           ^ number. This type is incompatible with
     13:   (a: string, b: number, c: boolean) => {},
               ^^^^^^ string

Error: process/nextTick.js:13
 13:   (a: string, b: number, c: boolean) => {},
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
1937:   nextTick: <T>(cb: (...T) => mixed, ...T) => void;
                          ^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1937
  This parameter is incompatible:
     16:   null // Error: null ~> boolean
           ^^^^ null. This type is incompatible with
     13:   (a: string, b: number, c: boolean) => {},
                                     ^^^^^^^ boolean

Error: process/nextTick.js:20
 20:   (a: string, b: number, c: boolean) => {},
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
1937:   nextTick: <T>(cb: (...T) => mixed, ...T) => void;
                          ^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/node.js:1937
  This parameter is incompatible:
     22:   'y', // Error: string ~> number
           ^^^ string. This type is incompatible with
     20:   (a: string, b: number, c: boolean) => {},
                          ^^^^^^ number

Error: process/nextTick.js:27
 27:   (a: string, b: number, c: boolean) => {} // Error: too few arguments
           ^^^^^^ string. This type is incompatible with
1937:   nextTick: <T>(cb: (...T) => mixed, ...T) => void;
                          ^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). See lib: <BUILTINS>/node.js:1937

Error: process/nextTick.js:27
 27:   (a: string, b: number, c: boolean) => {} // Error: too few arguments
                      ^^^^^^ number. This type is incompatible with
1937:   nextTick: <T>(cb: (...T) => mixed, ...T) => void;
                          ^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). See lib: <BUILTINS>/node.js:1937

Error: process/nextTick.js:27
 27:   (a: string, b: number, c: boolean) => {} // Error: too few arguments
                                 ^^^^^^^ boolean. This type is incompatible with
1937:   nextTick: <T>(cb: (...T) => mixed, ...T) => void;
                          ^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). See lib: <BUILTINS>/node.js:1937


Found 40 errors
